<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/menu_profile"/>

    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/ic_notifications_24"
        android:title="@string/menu_notifications"/>

    <item
        android:id="@+id/menuSettings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings"/>

    <item
        android:id="@+id/menuSupport"
        android:icon="@drawable/ic_baseline_support_agent_24"
        android:title="@string/menu_support"/>

    <item
        android:id="@+id/menuInfo"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_information"/>



</menu>