<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/blank_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NotesBlankFragment"
    android:layout_margin="8dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        style="?android:attr/borderlessButtonStyle"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:borderWidth="0dp" />

    <EditText
        android:id="@+id/date_of_note"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner_note"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/note_date"
        android:textSize="@dimen/note_text_size"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title_of_note"/>

    <EditText
        android:id="@+id/title_of_note"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="16dp"
        android:background="@drawable/rounded_corner_note"
        android:gravity="center_vertical"
        android:text="@string/note_title"
        android:textSize="@dimen/note_title_text_size"
        app:layout_constraintTop_toBottomOf="@id/date_of_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/body_of_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rounded_corner_note"
        android:padding="16dp"
        android:gravity="start"
        android:text="@string/note_body"
        android:textSize="@dimen/note_text_size"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_of_note"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:cornerRadius="8dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/note_btn"
        android:text="@string/save_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>